objects/Digital_Campaigns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Campaigns to be used in the Digital Renewal process.</description>
    <fields>
        <fullName>Best_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Best Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confiigurator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confiigurator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if automation has to create Premium Quote</description>
        <inlineHelpText>Check if automation has to create Premium Quote</inlineHelpText>
        <label>Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_3_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for 2-3 firm order confirmation contact logic</inlineHelpText>
        <label>2-3 Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YoY_1_Renewal__c</fullName>
        <label>YoY 1 Renewal %</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YoY_2__c</fullName>
        <label>YoY 2+ %</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Digital Campaigns</label>
</CustomObject>